--- a/chat.html
+++ b/chat.html
@@ -1,1 +1,23 @@
-<!---- Chris you can work on this page ----->
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8" />
+	<title>The Web Project</title>
+	<link rel="stylesheet" href="styles.css" />
+	<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
+</head>
+<body>
+	<header class="title"><span>The</span> Web Project</header>
+	<div id="wrapper">
+		
+			<footer>
+				<p><span class="credit"> The Web Project </span></p>
+			</footer>
+		
+	</div>
+	
+	<?php
+		
+	?>
+</body>
+</html>
