--- a/chat.html
+++ b/chat.html
@@ -9,10 +9,38 @@
 <body>
 	<header class="title"><span>The</span> Web Project</header>
 	<div id="wrapper">
-		
-			<footer>
-				<p><span class="credit"> The Web Project </span></p>
-			</footer>
+<!----------------------------------------------------------------------------------------------------------
+
+<div>
+
+	<input = name> / <input = submit>
+	// space //
+	<textarea>
+	
+	// space //
+	// space //
+
+</div>
+
+<div>
+
+<?php
+
+
+
+?>
+
+	Name /
+	Load messages...
+	/ Time
+	/ Delete
+
+</div>
+
+------------------------------------------------------------------------------------------------------------>
+		<footer>
+			<p><span class="credit"> The Web Project </span></p>
+		</footer>
 		
 	</div>
 	
