added form for chat

--- a/chat.html
+++ b/chat.html
@@ -9,35 +9,15 @@
 <body>
 	<header class="title"><span>The</span> Web Project</header>
 	<div id="wrapper">
-<!----------------------------------------------------------------------------------------------------------
-
-<div>
-
-	<input = name> / <input = submit>
-	// space //
-	<textarea>
-	
-	// space //
-	// space //
-
-</div>
-
-<div>
-
-<?php
 
 
+<!-----------use form as container------>
+<form action="" method="post" id="chat-submit-form">
+    <input type="text" placeholder="Name (optional)" class="chat_submit_name">
+    <input type="submit" value="Send" class="chat-submit-submit">
+    <textarea placeholder="Message" class="chat-submit-message"></textarea>
+</form>
 
-?>
-
-	Name /
-	Load messages...
-	/ Time
-	/ Delete
-
-</div>
-
------------------------------------------------------------------------------------------------------------->
 		<footer>
 			<p><span class="credit"> The Web Project </span></p>
 		</footer>
