Updated chat with styled textarea

--- a/chat.html
+++ b/chat.html
@@ -9,32 +9,26 @@
 <body>
 	<header class="title"><span>The</span> Web Project</header>
 	<div id="wrapper">
-
-
-            <!-----------use form as container------>
         <form action="" method="post" id="chat-submit-form">
             <input type="text" placeholder="Name (optional)" class="chat_submit_name">
-            <input type="submit" value="Send" class="chat-submit-submit">
-            <textarea placeholder="Message" class="chat-submit-message"></textarea>
+            <textarea placeholder="Message" class="chatSubmitMessage"></textarea>
+			<input type="submit" value="Send" class="chat-submit-submit">
         </form>
         <div class="chat-comments-container">
-            <!--------------------------------some php to get the comments. for each coment add one of these...........-------->
+            <!-------------------------------- PHP to retrieve comments -------------------------->
             <div class="chat-comments-comment">
                 <div class="chat-comments-time"><p><!--time using php--></p></div>
                 <div class="chat-comments-name"><p><!--name using php or anonymous--></p></div>
                 <div class="chat-comments-message"><p><!--message, again using php--></p></div>
             </div>
-            <!-----end of loop------>
+            <!------ End of PHP loop ------>
         </div>
-
 		<footer>
 			<p><span class="credit"> The Web Project </span></p>
 		</footer>
-		
 	</div>
-	
 	<?php
-		
+		#Additional PHP if necessary 
 	?>
 </body>
 </html>
