Another update with cleaner syntax

--- a/chat.html
+++ b/chat.html
@@ -9,10 +9,10 @@
 <body>
 	<header class="title"><span>The</span> Web Project</header>
 	<div id="wrapper">
-        <form action="" method="post" id="chat-submit-form">
-            <input type="text" placeholder="Name (optional)" class="chat_submit_name">
-            <textarea placeholder="Message" class="chatSubmitMessage"></textarea>
-			<input type="submit" value="Send" class="chat-submit-submit">
+        <form action="" method="post">
+            <input type="text" placeholder="Name (optional)">
+            <textarea placeholder="Message"></textarea>
+			<input type="submit" value="Send">
         </form>
         <div class="chat-comments-container">
             <!-------------------------------- PHP to retrieve comments -------------------------->
