Semantics to consider, and layout. Will work on it later

--- a/chat.html
+++ b/chat.html
@@ -7,12 +7,25 @@
 	<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 </head>
 <body>
+	<nav>
+	
+<!----------------------------------------------------------------------------------------------
+	
+	// 100% of page - light grey
+	
+	// Two buttons on the right - suggestions & home
+	
+	// Buttons should be 0.6 opaque on click
+
+------------------------------------------------------------------------------------------------>
+	
+	</nav>
 	<header class="title"><span>The</span> Web Project</header>
 	<div id="wrapper">
         <form action="" method="post">
             <input type="text" placeholder="Name (optional)">
             <textarea placeholder="Message"></textarea>
-			<input type="submit" value="Send">
+			<input type="submit" name="login" class="submit" value="Post Message" />
         </form>
         <div class="chat-comments-container">
             <!-------------------------------- PHP to retrieve comments -------------------------->
@@ -24,7 +37,7 @@
             <!------ End of PHP loop ------>
         </div>
 		<footer>
-			<p><span class="credit"> The Web Project </span></p>
+			<p><span class="credit"> Admin Launch Pad </span></p>
 		</footer>
 	</div>
 	<?php
