--- a/chat.html
+++ b/chat.html
@@ -7,17 +7,24 @@
 	<link href='http://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<nav>
+	<nav class="navigation">
 	
+	
+	
+			<li class="navButton right"><a href="#">Access Website</a></li>
+			<li class="navButton"><a href="#">Suggestions</a></li>
+			
+			<div class="clear"></div>
 <!----------------------------------------------------------------------------------------------
 	
-	// 100% of page - light grey
+	
 	
 	// Two buttons on the right - suggestions & home
 	
 	// Buttons should be 0.6 opaque on click
 
 ------------------------------------------------------------------------------------------------>
+
 	
 	</nav>
 	<header class="title"><span>The</span> Web Project</header>
